Added link to GitHub

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
   </div>
 </div>
       <p>Coded by Sophie Rowson</p>
+      <a href="https://github.com/SophieR13/my-weather-app-project"></a>
     </div>
     <script src="src/index.js"></script>
   </body>
