--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
     </div>
   </div>
 </div>
-      <p>Coded by Sophie Rowson</p>
-      <a href="https://github.com/SophieR13/my-weather-app-project"></a>
+      <p>Coded by Sophie Rowson
+      <a href="https://github.com/SophieR13/my-weather-app-project">GitHub repo</a></p>
     </div>
     <script src="src/index.js"></script>
   </body>
