--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="firstbox">
         <div class="card" style="width: 9rem">
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><strong>Weather</strong></li>
-            <li class="list-group-item">Mostly Cloudy</li>
-            <li class="list-group-item">Sunday</li>
+            <li class="list-group-item"><strong>Precipitation:</strong> 0%</li>
+            <li class="list-group-item"><strong>Humidity:</strong> 73%</li>
+            <li class="list-group-item"><strong>Wind:</strong> 2 km/h</li>
           </ul>
         </div>
       </div>
@@ -56,8 +56,9 @@
           <div class="card-body">
             <h5 class="card-title">14°</h5>
             <p class="card-text-city">Birmingham</p>
+            <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Clear"
           </div>
-          <div class="card-footer text-body-secondary">Today</div>
+          <div class="card-footer text-body-secondary">Clear</div>
         </div>
       </div>
       <br />
