--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 
       <div class="centrebox">
         <div class="card text-center" style="width: 18rem">
-          <div class="card-header"><span class="unit" id="units">Temperature in</span><span class="units">
+          <div class="card-header"><span class="unit">Temperature: <span id="temperature"></span><span class="units">
             <a href="#" id="celsius-link">°C</a> |
             <a href="#" id="fahrenheit-link">°F</a></div>
           <div class="card-body">
-            <h5 class="card-title" id="temperature">°</h5>
+            <h5 class="card-title"><span id="date"></span></h5>
             <p class="card-text-city" id="city">Birmingham</p>
             <div class="d-flex weather-temperature"></div>
             <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Clear"/>
