Added relevant icon from API

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <a href="#" id="fahrenheit-link">°F</a></div>
           <div class="card-body">
             <h5 class="card-title"><span id="date"></span></h5>
-            <p class="card-text-city" id="city">Birmingham</p>
+            <p class="card-text-city" id="city"></p>
             <div class="d-flex weather-temperature"></div>
-            <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Clear"/>
+            <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" alt="Clear" id="icon"/>
           <div class="card-footer text-body-secondary" id="description"></div>
         </div>
       </div>
