Updated placeholder and name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li class="list-group-item">Choose area</li>
             <li class="list-group-item">
               <form id="search-form">
-                <input type="search" placeholder="Type a city.." class="form-control" id="city-input" autocomplete="off"
+                <input type="search" placeholder= "Enter city" class="form-control" id="city-input" autocomplete="off"
                 />
                 <br>
                 <input type="submit" value="Search" class="btn btn-primary w-110"/>
@@ -108,7 +108,7 @@
     </div>
   </div>
 </div>
-      <p>Coded by Sophie Rowson
+      <p>Coded by Sophie Rowson.
       <a href="https://github.com/SophieR13/my-weather-app-project">GitHub repo</a></p>
     </div>
     <script src="src/index.js"></script>
