Implemented unit conversion

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
       <div class="centrebox">
         <div class="card text-center" style="width: 18rem">
-          <div class="card-header"><span class="unit">Temperature: <span id="temperature"></span><span class="units">
-            <a href="#" id="celsius-link">°C</a> |
+          <div class="card-header" id="weather-temperature"><span class="unit">Temperature: <span id="temperature"></span><span class="units">
+            <a href="#" id="celsius-link" class="active">°C</a> |
             <a href="#" id="fahrenheit-link">°F</a></div>
           <div class="card-body">
             <h5 class="card-title"><span id="date"></span></h5>
