Added percent symbol to humidity

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="card" style="width: 9rem">
           <ul class="list-group list-group-flush">
             <li class="list-group-item"><strong>Precipitation:</strong> 0%</li>
-            <li class="list-group-item"><strong>Humidity:</strong> <span id="humidity">73%</span></li>
+            <li class="list-group-item"><strong>Humidity:</strong> <span id="humidity">73%</span> %</li>
             <li class="list-group-item"><strong>Wind:</strong> <span id="wind"></span> km/h</li>
           </ul>
         </div>
