Gained daily forecast data from the API and console logged it

--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 
       <div class="centrebox">
         <div class="card text-center" style="width: 18rem">
-          <div class="card-header" id="weather-temperature"><span class="unit">Temperature: <span id="temperature"></span><span class="units">
+          <div class="card-header" id="weather-temperature">
+            <span class="unit">Temperature: <span id="temperature"></span><span class="units">
             <a href="#" id="celsius-link" class="active">°C</a> |
             <a href="#" id="fahrenheit-link">°F</a></div>
+            </span></span>
           <div class="card-body">
             <h5 class="card-title"><span id="date"></span></h5>
             <p class="card-text-city" id="city"></p>
@@ -57,64 +59,9 @@
         </div>
       </div>
       <br />
-      
-<div class="weather-forecast">      
-<div class="card-container">
-      <div class="row">
-          <div class="col-2">
-            <div class="card" style="width: 8rem">
-              <div class="card-body">
-                <p class="card-text">Mon</p>
-                <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/mist-day.png" alt="" width="36" />
-                <div class="weather-forecast-temperatures">
-                <h5 class="card-title"><span class="weather-forecase-temperature-max">18°</span><span class="weather-forecast-temperature-min"> 12°</span></h5>
-              </div>
-            </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card" style="width: 8rem">
-              <div class="card-body">
-                <p class="card-text">Tues</p>
-                <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/mist-day.png" alt="" width="36" />
-                <h5 class="card-title">18° 12°</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card" style="width: 8rem">
-              <div class="card-body">
-                <p class="card-text">Wed</p>
-                <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/mist-day.png" alt="" width="36" />
-                <h5 class="card-title">18° 12°</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card" style="width: 8rem">
-              <div class="card-body">
-                <p class="card-text">Thur</p>
-                <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/mist-day.png" alt="" width="36" />
-                <h5 class="card-title">18° 12°</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card" style="width: 8rem">
-              <div class="card-body">
-                <p class="card-text">Fri</p>
-                <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/mist-day.png" alt="" width="36" />
-                <h5 class="card-title">18° 12°</h5>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </div>
-</div>
-</div>
+
+    <div id="forecast"></div>
+          
       <p>Coded by Sophie Rowson.
       <a href="https://github.com/SophieR13/my-weather-app-project">GitHub repo</a></p>
     </div>
