Worked on function

--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
       <br />
 
     <div id="forecast"></div>
-          
+     
+    <div class="signature">
       <p>Coded by Sophie Rowson.
       <a href="https://github.com/SophieR13/my-weather-app-project">GitHub repo</a></p>
     </div>
+  </div>
     <script src="src/index.js"></script>
   </body>
 </html>
