--- a/index.html
+++ b/index.html
@@ -28,20 +28,19 @@
       <br />
 
       <div class="secondbox">
-        <div class="card" style="width: 9rem">
-          <ul class="list-group list-group-flush">
+    <div class="card" style="width: 9rem">
+        <ul class="list-group list-group-flush">
             <li class="list-group-item">Choose area</li>
             <li class="list-group-item">
-              <form id="search-form">
-                <input type="search" placeholder= "Enter city" class="form-control" id="city-input" autocomplete="off"
-                />
-                <br>
-                <input type="submit" value="Search" class="btn btn-primary w-110"/>
-              </form>
+                <form id="search-form">
+                    <input type="search" placeholder="Enter city" class="form-control" name="city" id="city-input" autocomplete="off" />
+                    <br />
+                    <input type="submit" value="Search" class="btn btn-primary"/>
+                </form>
             </li>
-          </ul>
-        </div>
-      </div>
+        </ul>
+    </div>
+</div>
 
       <div class="centrebox">
         <div class="card text-center" style="width: 18rem">
