--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   </head>
   <body>
     <div class="box">
-      <h1>Weather app</h1>
       <br />
       <div class="firstbox">
         <div class="card" style="width: 9rem">
@@ -33,9 +32,9 @@
             <li class="list-group-item">Choose area</li>
             <li class="list-group-item">
                 <form id="search-form">
-                    <input type="search" placeholder="Enter city" class="form-control" name="city" id="city-input" autocomplete="off" />
+                    <input type="search" placeholder="Enter city" class="form-control" id="city-input" autocomplete="off" />
                     <br />
-                    <input type="submit" value="Search" class="btn btn-primary"/>
+                    <input type="submit" value="Search" class="btn btn-primary w-100"/>
                 </form>
             </li>
         </ul>
