--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <ul class="list-group list-group-flush">
             <li class="list-group-item">Choose area</li>
             <li class="list-group-item">
-                <form id="search-form">
-                    <input type="text" placeholder="Enter city" class="form-control" id="city-input" autocomplete="off" />
+                <form id="search-form" class="mb-2">
+                    <input type="search" placeholder="Enter city" class="form-control" id="city-input" autocomplete="off" />
                     <br />
                     <input type="submit" value="Search" class="btn btn-primary w-100" name="city-input"/>
                 </form>
@@ -55,6 +55,7 @@
             <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" alt="Clear" id="icon"/>
           <div class="card-footer text-body-secondary" id="description"></div>
         </div>
+      </div>
       </div>
       <br />
 
